// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="sc-AxiKw eHzXqc bg-theme-primary border-theme-primary"
            >
              <span
                class="text-sm text-theme-background"
              >
                RO
              </span>
            </div>
            <span
              class="font-semibold"
            >
              ROBank
            </span>
          </div>
        </td>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-ark-mainnet"
          >
            <div
              class="sc-AxhCb fxrKLH text-ark-mainnet"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full overflow-hidden rounded-full"
              >
                <img
                  alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                  title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                business.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                bridgechain.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="float-right"
            >
              <button
                class="sc-AxirZ ggAYoh"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with multiple options 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="sc-AxiKw eHzXqc bg-theme-primary border-theme-primary"
            >
              <span
                class="text-sm text-theme-background"
              >
                RO
              </span>
            </div>
            <span
              class="font-semibold"
            >
              ROBank
            </span>
          </div>
        </td>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-ark-mainnet"
          >
            <div
              class="sc-AxhCb fxrKLH text-ark-mainnet"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full overflow-hidden rounded-full"
              >
                <img
                  alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                  title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                business.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                bridgechain.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="relative"
            data-testid="dropdown__toggle"
          >
            <div
              class="float-right"
            >
              <button
                class="sc-AxirZ ggAYoh"
                color="primary"
                type="button"
              >
                <div
                  class="sc-AxhCb VoPpj"
                  height="20"
                  width="20"
                >
                  <svg>
                    settings.svg
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`ContactListItem should render with one option 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="sc-AxiKw eHzXqc bg-theme-primary border-theme-primary"
            >
              <span
                class="text-sm text-theme-background"
              >
                RO
              </span>
            </div>
            <span
              class="font-semibold"
            >
              ROBank
            </span>
          </div>
        </td>
        <td
          class="text-center border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="sc-AxiKw eHzXqc border-ark-mainnet"
          >
            <div
              class="sc-AxhCb fxrKLH text-ark-mainnet"
              height="1em"
              width="1em"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="py-6 border-b border-dashed border-theme-neutral-200"
        >
          <div
            class="flex items-center space-x-3"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 jfYOFQ"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full overflow-hidden rounded-full"
              >
                <img
                  alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                  title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                />
              </div>
            </div>
            <div
              class="inline-block truncate align-middle"
            >
              <span
                class="sc-AxjAm StDqN text-theme-text font-semibold text-base"
                data-testid="address__wallet-address"
              >
                ASuusX…GQ3kqT
              </span>
            </div>
          </div>
        </td>
        <td
          class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
        >
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                delegate.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                business.svg
              </svg>
            </div>
          </div>
          <div
            class="sc-AxiKw eHzXqc border-black"
          >
            <div
              class="sc-AxhCb gZVKaf"
              height="25"
              width="25"
            >
              <svg>
                bridgechain.svg
              </svg>
            </div>
          </div>
        </td>
        <td
          class="border-b border-dashed border-theme-neutral-200"
        >
          <button
            class="sc-AxirZ fhzkRl float-right"
            color="primary"
            data-testid="ContactListItem__one-option-button-0"
            type="button"
          >
            Option 1
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
